add long key hash

--- a/tft/Makefile
+++ b/tft/Makefile
@@ -2,7 +2,7 @@ DEPLIB = ../build/deps/jansson/lib
 DEPH = ../build/deps/jansson/include
 
 main: tft.c
-	cc -g -L $(DEPLIB) -I . -I $(DEPH) -o main simple_hash.c tft.c -ljansson
+	cc -g -L $(DEPLIB) -I . -I $(DEPH) -o main simple_hash.c long_hash.c tft.c -ljansson
 
 	
 simple: simple_parse.c
