baseline for obs_source_get_scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ if(MSVC AND NOT EXISTS "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user")
 endif()
 
 if(NOT CMAKE_BUILD_TYPE)
-        set(CMAKE_BUILD_TYPE RelWithDebInfo)
+#        set(CMAKE_BUILD_TYPE RelWithDebInfo)
+        set(CMAKE_BUILD_TYPE DEBUG)
 endif()
 
 find_package(CXX11 REQUIRED)
