--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -69,6 +69,7 @@ if(WIN32 OR APPLE)
 	endif()
 endif()
 
+add_subdirectory(obs-tag)
 add_subdirectory(image-source)
 add_subdirectory(obs-x264)
 add_subdirectory(obs-libfdk)
